Fixed stats alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,14 +162,21 @@
 }
 
 .division_items {
-  display: flex;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  width: calc(100vw - 0.5rem);
+  max-width: 400px;
+}
+
+.gridonecol {
+  grid-template-columns: 100% !important;
+  max-width: 130px !important;
 }
 
 .stat {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0 2rem;
+  text-align: center;
 }
 
 .stat > .stat_number {
@@ -597,9 +604,6 @@ body > div.contributors.non_leads > div > div {
   }
   .total_downloads {
     margin: 3rem 1.5rem;
-  }
-  .stat {
-    padding: 0 1.5rem;
   }
   #desc {
     text-align: center;
